# Zitp

./: .gitignore  CMakeLists.txt  README.md  run_test.sh  程序设计语言基础大作业.docx  程序设计语言基础大作业补充说明.docx
src/: Term.cpp  Term.h  Term.hpp  main.cpp  value.cpp  value.hpp  zitp.cpp  zitp.hpp
tests/app_func1/: program.txt
tests/app_func2/: program.txt
tests/app_func3/: program.txt
tests/arith/: output.expected  program.txt
tests/currying/: program.txt
tests/high_order2/: program.txt
tests/io/: program.txt
tests/iter_fact/: program.txt
tests/nested/: output.expected  program.txt
tests/print/: program.txt
tests/ret_func/: output.expected  program.txt
tests/short_circuit/: program.txt
tests/while_loop/: input.txt  program.txt
